// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render correctly 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="c0"
/>
`;

exports[`render should render correctly with CSS props 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="c0"
  color="white"
  style="background-color: red; color: white;"
/>
`;
